# Tubio

./: .gitignore  README.md  Tubio.sln  Tubio_rest.postman_collection.json  license.txt  update_jasonpp.sh  update_mongoose.sh
Tubio/: $$DL_PROG_BUF_FILE  CMakeLists.txt  ConsoleManager.cpp  ConsoleManager.h  DownloadManager.cpp  DownloadManager.h  FileSystem.cpp  FileSystem.h  Framework.cpp  Framework.h  HttpServer.cpp  HttpServer.h  Idler.cpp  Idler.h  JasonPP.cpp  JasonPP.hpp  LogHistory.cpp  LogHistory.h  LogTypes.h  Logger.cpp  Logger.h  RestInterface.cpp  RestInterface.h  RestQueryHandler.cpp  RestQueryHandler.h  RestResponseTemplates.cpp  RestResponseTemplates.h  TimeUnits.h  Tubio.vcxproj  Tubio.vcxproj.filters  UIServer.cpp  UIServer.h  Updater.cpp  Updater.h  Version.h  XGConfig.cpp  XGConfig.h  XGControl.cpp  XGControl.h  main.cpp
Tubio/external_dependencies/casenta/mongoose/: mongoose.c
Tubio/frontend/: 200.html  index.html  script.js  site.webmanifest  style.css
Tubio/frontend/_nuxt/: 067a6af.js  07c557f.js  08bb332.js  08ef47b.js  0b8fb26.js  0fa9552.js  0fb9eb4.js  10ae25b.js  10b0b66.js  1259aff.js  16a21fe.js  21e49a9.js  21ee9b0.js  2416c2e.js  2434a68.js  25d0543.js  282c5a4.js  2971d5c.js  2b1a86c.js  30c5ab9.js  319ed71.js  33f8e12.js  3545cee.js  39f2f1c.js  3c81a41.js  44d19af.js  4821292.js  49efcd2.js  4abfebf.js  4d29309.js  4ddf16a.js  4e850c3.js  4f5ff73.js  4f6cc7a.js  5104fab.js  5262ac7.js  540a8c6.js  55edf12.js  56889ef.js  56e63c5.js  (+65 more)
Tubio/frontend/rest-dummies/: cache.json
Tubio/frontend/settings/: index.html
(+100 files in other folders)
